--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                 <em>Quantum</em> 8, 1387 (2024)
               </div>
               <div class="mt-1 text-xs text-neutral-500">
-                <a href="https://arxiv.org/abs/2401.08355" target="_blank" class="hover:underline">arXiv</a>
+                <a href="https://arxiv.org/abs/2306.16462" target="_blank" class="hover:underline">arXiv</a>
                 ·
-                <a href="https://quantum-journal.org/papers/q-2024-1387/" target="_blank" class="hover:underline">Journal</a>
+                <a href="https://quantum-journal.org/papers/q-2024-06-27-1387/" target="_blank" class="hover:underline">Journal</a>
               </div>
             </li>
 
