--- a/index.html
+++ b/index.html
@@ -108,9 +108,13 @@
                 Making existing quantum position verification protocols secure against arbitrary transmission loss
               </div>
               <div class="text-sm text-neutral-600">
-                R. Allerstorfer, A. Bluhm, H. Buhrman, M. Christandl,
-                L. Escolà-Farràs, …<br />
+                R. Allerstorfer, A. Bluhm, H. Buhrman, M. Christandl, L. Escolà-Farràs, F. Speelman, <strong>P. Verduyn Lunel</strong><br />
                 <em>Physical Review Letters</em> 135 (26), 260801 (2025)
+              </div>
+                <div class="mt-1 text-xs text-neutral-500">
+                <a href="https://arxiv.org/abs/2312.12614" target="_blank" class="hover:underline">arXiv</a>
+                ·
+                <a href="https://link.aps.org/doi/10.1103/szwj-s7r6" target="_blank" class="hover:underline">Journal</a>
               </div>
             </li>
 
