--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               class="aspect-[4/5] w-48 md:w-56 mx-auto rounded-2xl border border-neutral-200 object-cover"
             />
             <div class="mt-3 text-xs text-neutral-500">
-              Paris, FR · philip.verduyn-lunel@sorbonne-universite.fr
+              Paris, FR · Philip.Verduyn-Lunel@lip6.fr
             </div>
           </div>
         </section>
@@ -174,9 +174,9 @@
           <div class="mt-6">
             <a
               class="inline-flex items-center gap-2 rounded-full border border-neutral-900 px-4 py-2 text-sm hover:bg-neutral-900 hover:text-white transition-colors"
-              href="mailto:philip.verduyn-lunel@sorbonne-universite.fr"
+              href="mailto:Philip.Verduyn-Lunel@lip6.fr"
             >
-              philip.verduyn-lunel@sorbonne-universite.fr
+              Philip.Verduyn-Lunel@lip6.fr
             </a>
           </div>
 
