--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 Relating non-local quantum computation to information theoretic cryptography
               </div>
               <div class="text-sm text-neutral-600">
-                R. Allerstorfer, H. Buhrman, A. May, F. Speelman,
+                Rene Allerstorfer, Harry Buhrman, Alex May, Florian Speelman,
                 <strong>P. Verduyn Lunel</strong><br />
                 <em>Quantum</em> 8, 1387 (2024)
               </div>
@@ -108,7 +108,7 @@
                 Making existing quantum position verification protocols secure against arbitrary transmission loss
               </div>
               <div class="text-sm text-neutral-600">
-                R. Allerstorfer, A. Bluhm, H. Buhrman, M. Christandl, L. Escolà-Farràs, F. Speelman, <strong>P. Verduyn Lunel</strong><br />
+                Rene Allerstorfer, Andreas Bluhm, Harry Buhrman, Matthias Christandl, Llorenç Escolà-Farràs, Florian Speelman, <strong>P. Verduyn Lunel</strong><br />
                 <em>Physical Review Letters</em> 135 (26), 260801 (2025)
               </div>
                 <div class="mt-1 text-xs text-neutral-500">
@@ -123,20 +123,8 @@
                 On the role of quantum communication and loss in attacks on quantum position verification
               </div>
               <div class="text-sm text-neutral-600">
-                R. Allerstorfer, H. Buhrman, F. Speelman,
-                <strong>P. Verduyn Lunel</strong><br />
+                Rene Allerstorfer, Harry Buhrman, Florian Speelman, <strong>P. Verduyn Lunel</strong><br />
                 arXiv:2208.04341 (2022)
-              </div>
-            </li>
-
-            <li>
-              <div class="font-medium leading-snug">
-                Towards experimental demonstration of quantum position verification using single photons
-              </div>
-              <div class="text-sm text-neutral-600">
-                K. Kannewoff, M. Poortvliet, D. Bouwmeester,
-                R. Allerstorfer, <strong>P. Verduyn Lunel</strong>, …<br />
-                <em>Quantum Science and Technology</em> 10 (4), 045004 (2025)
               </div>
             </li>
 
@@ -145,9 +133,14 @@
                 Monogamy of Highly Symmetric States
               </div>
               <div class="text-sm text-neutral-600">
-                R. Allerstorfer, M. Christandl, D. Grinko,
-                I. Nechita, M. Ozols, D. Rochette, …<br />
+                Rene Allerstorfer, Matthias Christandl, Dmitry Grinko, Ion Nechita, Maris Ozols, Denis Rochette, <strong>P. Verduyn Lunel</strong> <br />
                 <em>Communications in Mathematical Physics</em> 407 (1), 21 (2026)
+              </div>
+              </div>
+                <div class="mt-1 text-xs text-neutral-500">
+                <a href="https://arxiv.org/abs/2309.16655" target="_blank" class="hover:underline">arXiv</a>
+                ·
+                <a href="https://link.springer.com/article/10.1007/s00220-025-05483-3" target="_blank" class="hover:underline">Journal</a>
               </div>
             </li>
           </ul>
