--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         <header class="sticky top-0 z-50 -mx-6 sm:-mx-8 border-b border-neutral-200 bg-white/70 backdrop-blur">
           <div class="mx-auto max-w-6xl px-6 sm:px-8 py-5 flex items-center justify-between">
             <div class="flex items-baseline gap-3">
-              <span class="inline-flex h-7 w-7 items-center justify-center rounded-full border border-neutral-900 text-xs font-medium tracking-widest">
+              <span class="inline-flex h-7 w-7 items-center justify-center rounded-full border border-neutral-900 text-[10px] font-medium tracking-tight">
                 PVL
               </span>
+
               <h1 class="text-lg font-semibold tracking-tight">
                 Philip Verduyn Lunel
               </h1>
