--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
               </div>
               <div class="text-sm text-neutral-600">
                 Rene Allerstorfer, Harry Buhrman, Alex May, Florian Speelman,
-                <strong>P. Verduyn Lunel</strong><br />
+                <strong>Philip Verduyn Lunel</strong><br />
                 <em>Quantum</em> 8, 1387 (2024)
               </div>
               <div class="mt-1 text-xs text-neutral-500">
@@ -109,7 +109,7 @@
                 Making existing quantum position verification protocols secure against arbitrary transmission loss
               </div>
               <div class="text-sm text-neutral-600">
-                Rene Allerstorfer, Andreas Bluhm, Harry Buhrman, Matthias Christandl, Llorenç Escolà-Farràs, Florian Speelman, <strong>P. Verduyn Lunel</strong><br />
+                Rene Allerstorfer, Andreas Bluhm, Harry Buhrman, Matthias Christandl, Llorenç Escolà-Farràs, Florian Speelman, <strong>Philip Verduyn Lunel</strong><br />
                 <em>Physical Review Letters</em> 135 (26), 260801 (2025)
               </div>
                 <div class="mt-1 text-xs text-neutral-500">
@@ -124,7 +124,7 @@
                 On the role of quantum communication and loss in attacks on quantum position verification
               </div>
               <div class="text-sm text-neutral-600">
-                Rene Allerstorfer, Harry Buhrman, Florian Speelman, <strong>P. Verduyn Lunel</strong><br />
+                Rene Allerstorfer, Harry Buhrman, Florian Speelman, <strong>Philip Verduyn Lunel</strong><br />
                 arXiv:2208.04341 (2022)
               </div>
             </li>
@@ -134,7 +134,7 @@
                 Monogamy of Highly Symmetric States
               </div>
               <div class="text-sm text-neutral-600">
-                Rene Allerstorfer, Matthias Christandl, Dmitry Grinko, Ion Nechita, Maris Ozols, Denis Rochette, <strong>P. Verduyn Lunel</strong> <br />
+                Rene Allerstorfer, Matthias Christandl, Dmitry Grinko, Ion Nechita, Maris Ozols, Denis Rochette, <strong>Philip Verduyn Lunel</strong> <br />
                 <em>Communications in Mathematical Physics</em> 407 (1), 21 (2026)
               </div>
               <div class="mt-1 text-xs text-neutral-500">
