--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
           </h2>
 
           <p class="mt-5 max-w-2xl text-base leading-relaxed text-neutral-600">
-            Postdoctoral researcher at Sorbonne Université.  
+            I am a postdoctoral researcher at Sorbonne Université in the group of Alex Grilo.  
             I work on quantum information theory, quantum cryptography,
             and non-local quantum computation, with a particular focus on
-            quantum position verification.
+            quantum position verification. Previously I was a PhD student at CWI &amp; 
+            Qusoft in Amsterdam, supervised by Harry Buhrman and Florian Speelman.
           </p>
 
           <div class="mt-8 flex flex-wrap justify-center gap-3 text-sm">
