--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
               </div>
               <div class="text-sm text-neutral-600">
                 Rene Allerstorfer, Harry Buhrman, Florian Speelman, <strong>Philip Verduyn Lunel</strong><br />
-                arXiv:2208.04341 (2022)
+              </div>
+              <div class="mt-1 text-xs text-neutral-500">
+                <a href="https://arxiv.org/abs/2208.04341" target="_blank" class="hover:underline">arXiv</a>
               </div>
             </li>
 
@@ -144,6 +146,19 @@
                 <a href="https://link.springer.com/article/10.1007/s00220-025-05483-3" target="_blank" class="hover:underline">Journal</a>
               </div>
             </li>
+
+            <li>
+              <div class="font-medium leading-snug">
+               Permutation tests for quantum state identity
+              </div>
+              <div class="text-sm text-neutral-600">
+                Harry Buhrman, Dmitry Grinko, <strong>Philip Verduyn Lunel</strong> , Jordi Weggemans <br />
+              </div>
+              <div class="mt-1 text-xs text-neutral-500">
+                <a href="https://arxiv.org/abs/2405.09626" target="_blank" class="hover:underline">arXiv</a>
+              </div>
+            </li>
+
           </ul>
 
           <div class="mt-8 text-sm">
