--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <div class="text-sm text-neutral-600">
                 Rene Allerstorfer, Harry Buhrman, Alex May, Florian Speelman,
                 <strong>Philip Verduyn Lunel</strong><br />
-                <em>Quantum</em> 8, 1387 (2024)
+                <em>Quantum</em> 8, 1387 (2024). QIP 2024. QCrypt 2024 (<strong> Invited plenary talk</strong>).
               </div>
               <div class="mt-1 text-xs text-neutral-500">
                 <a href="https://arxiv.org/abs/2306.16462" target="_blank" class="hover:underline">arXiv</a>
