--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               <div class="text-sm text-neutral-600">
                 Rene Allerstorfer, Harry Buhrman, Alex May, Florian Speelman,
                 <strong>Philip Verduyn Lunel</strong><br />
-                <em>Quantum</em> 8, 1387 (2024). QIP 2024. QCrypt 2024 (<strong> Invited plenary talk</strong>).
+                <em>Quantum</em> 8, 1387 (2024). QIP 2024. QCrypt 2024 (<strong>Invited plenary talk</strong>).
               </div>
               <div class="mt-1 text-xs text-neutral-500">
                 <a href="https://arxiv.org/abs/2306.16462" target="_blank" class="hover:underline">arXiv</a>
@@ -111,7 +111,7 @@
               </div>
               <div class="text-sm text-neutral-600">
                 Rene Allerstorfer, Andreas Bluhm, Harry Buhrman, Matthias Christandl, Llorenç Escolà-Farràs, Florian Speelman, <strong>Philip Verduyn Lunel</strong><br />
-                <em>Physical Review Letters</em> 135 (26), 260801 (2025)
+                <em>Physical Review Letters</em> 135 (26), 260801 (2025). QIP 2024. QCrypt 2024
               </div>
                 <div class="mt-1 text-xs text-neutral-500">
                 <a href="https://arxiv.org/abs/2312.12614" target="_blank" class="hover:underline">arXiv</a>
@@ -138,7 +138,7 @@
               </div>
               <div class="text-sm text-neutral-600">
                 Rene Allerstorfer, Matthias Christandl, Dmitry Grinko, Ion Nechita, Maris Ozols, Denis Rochette, <strong>Philip Verduyn Lunel</strong> <br />
-                <em>Communications in Mathematical Physics</em> 407 (1), 21 (2026)
+                <em>Communications in Mathematical Physics</em> 407 (1), 21 (2026). QIP 2024.
               </div>
               <div class="mt-1 text-xs text-neutral-500">
                 <a href="https://arxiv.org/abs/2309.16655" target="_blank" class="hover:underline">arXiv</a>
@@ -153,6 +153,7 @@
               </div>
               <div class="text-sm text-neutral-600">
                 Harry Buhrman, Dmitry Grinko, <strong>Philip Verduyn Lunel</strong> , Jordi Weggemans <br />
+                QIP 2024.
               </div>
               <div class="mt-1 text-xs text-neutral-500">
                 <a href="https://arxiv.org/abs/2405.09626" target="_blank" class="hover:underline">arXiv</a>
