--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               </div>
               <div class="text-sm text-neutral-600">
                 Harry Buhrman, Dmitry Grinko, <strong>Philip Verduyn Lunel</strong> , Jordi Weggemans <br />
-                QIP 2024.
+                TQC 2024.
               </div>
               <div class="mt-1 text-xs text-neutral-500">
                 <a href="https://arxiv.org/abs/2405.09626" target="_blank" class="hover:underline">arXiv</a>
