--- a/index.html
+++ b/index.html
@@ -87,6 +87,33 @@
           <h3 class="text-xl md:text-2xl font-semibold tracking-tight">
             Selected Publications
           </h3>
+          
+            <li>
+              <div class="font-medium leading-snug">
+                A complexity theory for non-local quantum computation
+              </div>
+              <div class="text-sm text-neutral-600">
+                Andreas Bluhm, Simon Höfer, Alex May, Mikka Stasiuk, <strong>Philip Verduyn Lunel</strong>, Henry Yuen
+              </div>
+              <div class="mt-1 text-xs text-neutral-500">
+                <a href="https://arxiv.org/abs/2505.23893" target="_blank" class="hover:underline">arXiv</a>
+              </div>
+            </li>
+          
+            <li>
+              <div class="font-medium leading-snug">
+                Orthogonality broadcasting and quantum position verification
+              </div>
+              <div class="text-sm text-neutral-600">
+                Ian George, Rene Allerstorfer, <strong>Philip Verduyn Lunel</strong>, Eric Chitambar<br />
+                <em>New Journal of Physics</em> 27 (5), 054511. TQC 2025. QCrypt 2025
+              </div>
+              <div class="mt-1 text-xs text-neutral-500">
+                <a href="https://arxiv.org/abs/2311.00677" target="_blank" class="hover:underline">arXiv</a>
+                .
+                <a href="https://iopscience.iop.org/article/10.1088/1367-2630/add87c" target="_blank" class="hover:underline">Journal</a>
+              </div>
+            </li>
 
           <ul class="mt-6 space-y-6">
             <li>
@@ -117,18 +144,6 @@
                 <a href="https://arxiv.org/abs/2312.12614" target="_blank" class="hover:underline">arXiv</a>
                 ·
                 <a href="https://link.aps.org/doi/10.1103/szwj-s7r6" target="_blank" class="hover:underline">Journal</a>
-              </div>
-            </li>
-
-            <li>
-              <div class="font-medium leading-snug">
-                On the role of quantum communication and loss in attacks on quantum position verification
-              </div>
-              <div class="text-sm text-neutral-600">
-                Rene Allerstorfer, Harry Buhrman, Florian Speelman, <strong>Philip Verduyn Lunel</strong><br />
-              </div>
-              <div class="mt-1 text-xs text-neutral-500">
-                <a href="https://arxiv.org/abs/2208.04341" target="_blank" class="hover:underline">arXiv</a>
               </div>
             </li>
 
