--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                 A complexity theory for non-local quantum computation
               </div>
               <div class="text-sm text-neutral-600">
-                Andreas Bluhm, Simon Höfer, Alex May, Mikka Stasiuk, <strong>Philip Verduyn Lunel</strong>, Henry Yuen
+                Andreas Bluhm, Simon Höfer, Alex May, Mikka Stasiuk, <strong>Philip Verduyn Lunel</strong>, Henry Yuen<br />
+                <em>arXiv:2505.23893</em> (2025).
               </div>
               <div class="mt-1 text-xs text-neutral-500">
                 <a href="https://arxiv.org/abs/2505.23893" target="_blank" class="hover:underline">arXiv</a>
