--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </div>
               <div class="text-sm text-neutral-600">
                 Ian George, Rene Allerstorfer, <strong>Philip Verduyn Lunel</strong>, Eric Chitambar<br />
-                <em>New Journal of Physics</em> 27 (5), 054511. TQC 2025. QCrypt 2025
+                <em>New Journal of Physics</em> 27 (5), 054511. TQC 2025. QCrypt 2025.
               </div>
               <div class="mt-1 text-xs text-neutral-500">
                 <a href="https://arxiv.org/abs/2311.00677" target="_blank" class="hover:underline">arXiv</a>
@@ -141,7 +141,7 @@
               </div>
               <div class="text-sm text-neutral-600">
                 Rene Allerstorfer, Andreas Bluhm, Harry Buhrman, Matthias Christandl, Llorenç Escolà-Farràs, Florian Speelman, <strong>Philip Verduyn Lunel</strong><br />
-                <em>Physical Review Letters</em> 135 (26), 260801 (2025). QIP 2024. QCrypt 2024
+                <em>Physical Review Letters</em> 135 (26), 260801 (2025). QIP 2024. QCrypt 2024.
               </div>
                 <div class="mt-1 text-xs text-neutral-500">
                 <a href="https://arxiv.org/abs/2312.12614" target="_blank" class="hover:underline">arXiv</a>
