--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="L2vXgZSLpRO7rb7h12BTxffv3ToZJ6R9jtRGMPQU6_w" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Philip Verduyn Lunel</title>
