--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
         scroll-behavior: smooth;
       }
     </style>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Philip Verduyn Lunel",
+        "url": "https://philiplunel.github.io/"
+      }
+    </script>
+
   </head>
 
   <body class="bg-white text-neutral-900 antialiased selection:bg-black selection:text-white">
